--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ MarkupSafe>=2.0.1
 mypy-extensions>=0.4.3
 orjson>=3.6.4
 pathspec>=0.9.0
+Pillow==9.5.0
 platformdirs>=2.4.0
 psycopg2-binary>=2.9.1
 python-multipart>=0.0.5
